<resources>
    <string name="form"> Start Interview </string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="formB"> B </string>
    <string name="formC"> C </string>
    <string name="formD1"> D1 </string>
    <string name="formD2"> D2 </string>
    <string name="formE"> E </string>
    <string name="formF"> F </string>
    <string name="openScreening"> Screening </string>
    <string name="openPretest"> Pre Test Knowlegde </string>
    <string name="sectionagisidentification_mainheading">Section A: GIS identification: Section A: GIS identification</string>
    <string name="btnSync">Download Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="no"> No </string>
    <string name="dkn">Don\'t Know</string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="istatus">Interview Status</string>
    <string name="istatusa">Complete</string>
    <string name="istatusb">Incomplete</string>
    <string name="istatus96"> Other </string>
    <string name="istatus96x"> Specify </string>
    <string name="endInterview">ختم</string>
    <string name="nextSection">اگلا سیکشن</string>
    <string name="app_name"> Ehsaas Nashonuma Programme </string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnDownload">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="householdinformationform_heading"> Household Information Form </string>
    <string name="H1Heading">سیکشن ایچ 1: گھرانے کی معلومات</string>
    <string name="H1Instructions">ہدایات : یہ سیکشن فہرست میں موجودبی آئی ایس پی سے مستفید ہونے والے فرد سے بھریں۔ فرد کے موجود نہ ہونے کی صورت میں بی آئی ایس پی سے مستفید ہونے والے کسی دوسرے فرد کا انتخاب کریں موجود ہو</string>
    <string name="H101">کلسٹر نمبر</string>
    <string name="H102">صوبہ</string>
    <string name="H103">ضلع</string>
    <string name="H104">تحصیل /  تعلقہ</string>
    <string name="H105">یونین کونسل</string>
    <string name="H106">شہر/گاؤں</string>
    <string name="H107">گھرانہ نمبر</string>
    <string name="H108">انٹرویو کی تاریخ</string>
    <string name="H109">انٹرویو کا وقت</string>
    <string name="H110">انٹرویو لینے والے کا نام</string>
    <string name="H111">جواب دہندہ کانام</string>
    <string name="H112">کیایہ گھر بی آئی ایس پی سے مستفید ہوتاہے؟</string>
    <string name="H11201">ہاں</string>
    <string name="H11202">نہیں</string>
    <string name="H113">بی آئی ایس پی سے مستفید ہونےوالوں کی تعداد</string>
    <string name="H114">کیاگھرکاکوئی فرد احساس نشونماونمامیں شامل ہے؟</string>
    <string name="H11401">ہاں</string>
    <string name="H11402">نہیں</string>
    <string name="H115">کیا جواب دہندہ گھر کا سربراہ ہے؟</string>
    <string name="H11501">ہاں</string>
    <string name="H11502">نہیں</string>
    <string name="H116">اگر نہیں  توجواب دہندہ کون ہے؟</string>
    <string name="H11601">گھر کے سربراہ کی بیوی</string>
    <string name="H11602">گھر کے سربراہ کی بیٹی</string>
    <string name="H11603">گھر کے سربراہ کی بہو</string>
    <string name="H11696">دیگر وضاحت کریں</string>
    <string name="H117">کیااجازت لی گئی؟</string>
    <string name="H11701">زبانی اجازت</string>
    <string name="H11702">تحریری اجازت</string>
    <string name="H118">گھرانے کے انٹرویوکا نتیجہ. انٹرویومکمل نہ ہونے کی صورت میں ٹیم لیڈر سے مشورہ کریں</string>
    <string name="H11801">مکمل</string>
    <string name="H11802">گھرانے کا کوئی فرد یا باصلاحیت جواب دہندہ گھر پر موجود نہیں</string>
    <string name="H11803">گھرانے کے تمام افراد لمبے عرصے کے لیے گھر سے غیر حاضر تھے</string>
    <string name="H11804">انکار کردیا</string>
    <string name="H11805">خالی گھر/غیر رہائشی</string>
    <string name="H11806">گھر نہیں ملا</string>
    <string name="H11807">بی آئی ایس پی سے فائدہ اٹھانے والا موجود نہیں ہے</string>
    <string name="H11896">دیگر وضاحت کریں</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database" translatable="false">Database</string>
    <string name="H2Heading">سیکشن  ایچ 2: گھر کے افراد کی فہرست</string>
    <string name="H2Heading2">سیکشن  ایچ 2: گھر کے افراد </string>
    <string name="H201">لائن نمبر</string>
    <string name="H202">برا ئےمہربانی پہلے مجھے ان تمام افراد کانام بتائیں جو عام طور پر یہاں رہتے ہیں، خاندان کے سربراہ سے شروع کریں. گھر کے دیگر افراد کے بارے میں پوچھیں</string>
    <string name="H203">گھر کے سربراہ سے رشتہ ؟</string>
    <string name="H20301">سربراہ</string>
    <string name="H20302">خاوند ،بیوی</string>
    <string name="H20303">بیٹا،بیٹی</string>
    <string name="H20304">داماد ،بہو</string>
    <string name="H20305">پوتا،پوتی،نواسا،نواسی</string>
    <string name="H20306">والدین</string>
    <string name="H20307">ساس،سسر</string>
    <string name="H20308">بھائی،بہن</string>
    <string name="H20309">بھابھی،سالا،سالی،دیور،دیورانی</string>
    <string name="H20310">چچا،چچی،ماموں،ممانی،پھوپھا،پھوپھی،خالہ خالو</string>
    <string name="H20311">بھانجا،بھانجی،بھتیجا،بھتیجی</string>
    <string name="H20312">دیگر رشتہ دار</string>
    <string name="H20313">سوتیلے،رضاعی،لے پالک بچے</string>
    <string name="H20314">ملازم</string>
    <string name="H20315">یتیم</string>
    <string name="H20396">دیگر (کوئی رشتہ دار نہیں)</string>
    <string name="H20398">رشتہ معلوم نہیں</string>
    <string name="H204">جنس</string>
    <string name="H20401">مرد</string>
    <string name="H20402">عورت</string>
    <string name="H20403">مخنث</string>
    <string name="H205">(نام) کی  تاریخ پیدائش کیاہے؟ (اگر مہینہ/تاریخ معلوم نہ ہوتو 98 لکھیں اور اگر سال معلوم نہ  ہوتو9998 لکھیں) 2 سال سے کم عمر کے بچے کے لیے مہینہ لازمی ہے۔</string>
    <string name="H20501">دن</string>
    <string name="H20502">مہینہ</string>
    <string name="H20503">سال</string>
    <string name="H206">(نام) عمر کتنی ہے؟اگر تاریخ پیدائش معلوم نہ ہو. مکمل دن مہینہ سال لکھیں (اگر عمر95 سال سے زیادہ ہے تو 95 لکھیں)</string>
    <string name="H20601">دن</string>
    <string name="H20602">مہینہ</string>
    <string name="H20603">سال</string>
    <string name="H207">کیاآپ ان پروگرامز کی وضاحت کرسکتے ہیں(ایک سے زیادہ جوابات آسکتے ہیں)</string>
    <string name="H20701">احساس کفالت پروگرام</string>
    <string name="H20702">احساس وسیلہ تعلیم</string>
    <string name="H20703">احساس بیروزگار پروگرام</string>
    <string name="H20704">بی آئی ایس پی پروگرام میں شامل نہیں</string>
    <string name="H20796">دیگر وضاحت کریں</string>
    <string name="H208">بی آئی ایس پی پروگرام سےمستفیدہونےوالے کا شناختی کارڈنمبر</string>
    <string name="H209">ازواجی حیثیت (دس سال سے زیادہ عمر کےافراد کیلئے)</string>
    <string name="H20901">شادی شدہ</string>
    <string name="H20902">بیوہ/رنڈوہ</string>
    <string name="H20903">طلاق یافتہ</string>
    <string name="H20904">الگ رہتا/رہتی ہے</string>
    <string name="H20905">کنوارہ/کنواری</string>
    <string name="H210">شادی شدہ خاتون کی موجودہ حالت</string>
    <string name="H21001">حاملہ عورت</string>
    <string name="H21002">عورت 2 سال سے کم عمر بچے کے ساتھ</string>
    <string name="H21003">حمل سے نہیں اور 2 سال سے کم عمر بچہ بھی نہیں ہے</string>
    <string name="H211">تعلیم*(تین  یا تین سال سے  زائد عمر کےافراد کیلئے)</string>
    <string name="H21101">کوئی نہیں</string>
    <string name="H21102">پری پرائمری</string>
    <string name="H21103">پرائمری (5–1)</string>
    <string name="H21104">مڈل(8–6)</string>
    <string name="H21105">سیکنڈری(10–9)</string>
    <string name="H21106">انٹرمیڈیٹ</string>
    <string name="H21107">گریجویشن</string>
    <string name="H21108">ماسٹرز</string>
    <string name="H21109">پی-ایچ-ڈی</string>
    <string name="H21198">معلوم نہیں</string>
    <string name="H212">پیشہ (دس یا دس سال سے زائدعمرکے افراد کیلئے)</string>
    <string name="H21201">کوئی نہیں</string>
    <string name="H21202">غیر ہنرمندمزدور</string>
    <string name="H4Heading">سیکشن ایچ 4:ہاتھ دھونے کی معلومات</string>
    <string name="H401">صرف مشاہدہ: براہ مہربانی وہ جگہ دکھا  ئیں جہاں آپ اور آپ کے گھروالے اکثر ہاتھ دھوتے ہیں؟</string>
    <string name="H40101">مشاہدہ کیا </string>
    <string name="H40102">رہائشی جگہ اور پلاٹ میں موجود نہیں</string>
    <string name="H40103">دیکھنے کی اجازت نہیں</string>
    <string name="H40104">کو  ئی اور وجہ</string>
    <string name="H402">صرف مشاہدہ: ہاتھ دھونے کے لئے مخصوص جگہ پر پانی کی موجودگی کا مشاہدہ.</string>
    <string name="H40201">پانی موجود ہے</string>
    <string name="H40202">پانی موجود نہیں  ہے</string>
    <string name="H403">صرف مشاہدہ: صابن، ڈٹرجنٹ یا دیگر صفائی ایجنٹ کی موجودگی کا مشاہدہ. [ایک سے زیادہ جوابات آسکتے ہیں]</string>
    <string name="H40301">نہانے یا ہاتھ دھونے ولا صابن</string>
    <string name="H40302">ڈٹرجنٹ پاوڈریا پانی جیسی پیسٹ</string>
    <string name="H40303">مائع یا پانی والا صابن</string>
    <string name="H40304">خاک /مٹی/ریت</string>
    <string name="H40305">کچھ نہیں</string>
    <string name="H404">کیاآپ کے گھر میں  ہاتھ دھونے کے لئے کوئی صابن یا ڈٹرجنٹ ہے؟</string>
    <string name="H40401">ہاں</string>
    <string name="H40402">نہیں</string>
    <string name="H405">اگر ہاں تو کیا آپ مجھے  دکھا سکتے ہیں؟ [ایک سے زیادہ جوابات آسکتے ہیں]</string>
    <string name="H40501">نہانے یا ہاتھ دھونے ولا صابن</string>
    <string name="H40502">ڈٹرجنٹ پاوڈریا پانی جیسی پیسٹ</string>
    <string name="H40503">مائع یا پانی والا صابن</string>
    <string name="H40504">خاک /مٹی/ریت</string>
    <string name="H40505">کچھ نہیں</string>
    <string name="H406">کن حالات میں آپ صابن سے ہاتھ دھوتے ہو۔ اس سوال کا کوئی بھی جواب پڑھ کے نہیں سنانا ہے۔ ہر سوال وقفے کے  بعد بار بار دھرانا ہے جب تک جواب دہندہ یہ نہ سمجھیں کہ ان کے پاس کوئی اور جواب نہیں۔</string>
    <string name="H40601">کھانا تیار کرنے سے پہلے</string>
    <string name="H40602">کھانا پکانے سے پہلے</string>
    <string name="H40603">کھانا کھانے سے پہلے</string>
    <string name="H40604">بچے کو  کھانا کھلانے  سے پہلے </string>
    <string name="H40605">بچے کو  ما ں کا دودھ پلانے سے پہلے</string>
    <string name="H40606">بچے کا پاخانہ  صاف  کرنے کے  بعد</string>
    <string name="H40607">بچے کی نیپی تبدیل کرنے کے بعد</string>
    <string name="H40608">بچوں کا پاخانہ پھینکنے کے بعد</string>
    <string name="H40609">لیٹرین استعمال کرنے کے بعد</string>
    <string name="H40696">دیگر وضاحت کریں</string>
</resources>