<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.wasimabbas.ehsas_evaluation.ui.sections.H4" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/i_textview"
                    android:text="@string/H4Heading" />
            </LinearLayout>

            <!--H401  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH401"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H401" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H401" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H401"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40101"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40101" />

                        <RadioButton
                            android:id="@+id/H40102"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40102" />

                        <RadioButton
                            android:id="@+id/H40103"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40103" />

                        <RadioButton
                            android:id="@+id/H40104"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40104" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--H402  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH402"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H402" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H402" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H402"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40201" />

                        <RadioButton
                            android:id="@+id/H40202"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40202" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--H403  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH403"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H403" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H403" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H403"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40301"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40301" />

                        <RadioButton
                            android:id="@+id/H40302"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40302" />

                        <RadioButton
                            android:id="@+id/H40303"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40303" />

                        <RadioButton
                            android:id="@+id/H40304"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40304" />

                        <RadioButton
                            android:id="@+id/H40305"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40305" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--H404  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH404"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H404" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H404" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H404"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40401"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40401" />

                        <RadioButton
                            android:id="@+id/H40402"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40402" />


                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--H405  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH405"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H405" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H405" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H405"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40501"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40501" />

                        <RadioButton
                            android:id="@+id/H40502"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40502" />

                        <RadioButton
                            android:id="@+id/H40503"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40503" />

                        <RadioButton
                            android:id="@+id/H40504"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40504" />

                        <RadioButton
                            android:id="@+id/H40505"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40505" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--H406  Radio-->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVH406"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_H406" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/H406" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/H406"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/H40601"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40601" />

                        <RadioButton
                            android:id="@+id/H40602"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40602" />

                        <RadioButton
                            android:id="@+id/H40603"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40603" />

                        <RadioButton
                            android:id="@+id/H40604"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40604" />

                        <RadioButton
                            android:id="@+id/H40605"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40605" />

                        <RadioButton
                            android:id="@+id/H40606"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40606" />

                        <RadioButton
                            android:id="@+id/H40607"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40607" />

                        <RadioButton
                            android:id="@+id/H40608"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40608" />

                        <RadioButton
                            android:id="@+id/H40609"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40609" />

                        <RadioButton
                            android:id="@+id/H40696"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/H40696" />

                        <EditText
                            android:id="@+id/H40696x"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginBottom="12dp"
                            android:hint="@string/H40696"
                            android:tag="H40696"
                            android:text='@{H40696.checked? H40696.getText().toString() : ""}'
                            android:visibility='@{H40696.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/submitBtns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</layout>